// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecuritySelector component should render properly 1`] = `
<WithStyles(Grid)
  item={true}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.05)",
      "marginTop": 24,
      "padding": 24,
    }
  }
  xs={12}
>
  <WithStyles(Typography)
    style={
      Object {
        "marginTop": -8,
      }
    }
    variant="h6"
  >
    Override datastream security policy details
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="p"
    variant="body2"
  >
    test
  </WithStyles(Typography)>
  <WithStyles(Grid)
    alignContent="flex-end"
    alignItems="flex-end"
    container={true}
    spacing={8}
    style={
      Object {
        "borderBottom": "1px solid rgba(0,0,0,0.1)",
        "paddingBottom": 8,
        "paddingTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      xs={2}
    >
      Filename:
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={4}
    >
      Test_1.PDF
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={6}
    >
      <PolicyDropdown
        disabled={false}
        displayPrompt={false}
        fieldLabel={
          <span>
            Security policy for this file to override inheritance
          </span>
        }
        fieldName="filePolicy1"
        policyList={
          Array [
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum. Sed lectus mauris, mollis et dolor vitae, rutrum lobortis risus. Aenean a nisl non felis pretium tincidunt id sit amet augue. Aenean ac quam non libero malesuada vulputate. Integer commodo lacus quis egestas varius. Etiam dapibus mollis feugiat. Aliquam pellentesque nunc ac libero feugiat laoreet. In hac habitasse platea dictumst. Duis sagittis lorem id vestibulum maximus. Nullam vel libero eu eros faucibus venenatis. Vestibulum interdum porttitor ipsum sed fringilla. Sed enim lacus, faucibus vel tincidunt euismod, euismod vitae turpis.",
              "id": 1,
              "label": "Administrators",
              "name": "Administrators",
              "order": 0,
              "value": 1,
            },
            Object {
              "description": "Suspendisse pellentesque libero eget molestie vehicula. Vestibulum eget purus euismod, imperdiet massa non, vulputate lectus. Sed mi mi, placerat ultricies purus nec, sollicitudin fringilla odio. Aliquam erat volutpat. Vestibulum at augue sed arcu condimentum finibus id et dolor.",
              "id": 2,
              "label": "Theses Assessors",
              "name": "Theses Assessors",
              "order": 10,
              "value": 2,
            },
            Object {
              "description": "Mauris pulvinar tortor eu lectus facilisis, ut ultricies risus elementum. Aenean ac sem quis enim molestie egestas ut id sem. Nulla nibh elit, efficitur fermentum nisl et, semper ultrices quam. Aenean in sollicitudin mi. Cras ultricies eros quis maximus pellentesque. Mauris justo mi, aliquet vitae nisl et, tristique pulvinar risus.",
              "id": 3,
              "label": "Evidence Assessors",
              "name": "Evidence Assessors",
              "order": 20,
              "value": 3,
            },
            Object {
              "description": "Sed quis blandit erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec condimentum feugiat maximus. Donec ullamcorper nulla nec leo elementum dapibus. Ut enim nunc, volutpat quis facilisis sed, congue vel arcu.",
              "id": 4,
              "label": "Staff and Students",
              "name": "Staff and Students",
              "order": 30,
              "value": 4,
            },
            Object {
              "description": "Aenean arcu nibh, feugiat ut mauris id, consectetur pulvinar ipsum. Vestibulum ullamcorper dictum tristique. Sed lobortis est in mauris venenatis, quis euismod nunc pellentesque. Cras iaculis a ex nec laoreet. Aliquam sapien arcu, pharetra eget maximus ac, volutpat sit amet libero.",
              "id": 5,
              "label": "Public",
              "name": "Public",
              "order": 100,
              "value": 5,
            },
          ]
        }
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    alignContent="flex-end"
    alignItems="flex-end"
    container={true}
    spacing={8}
    style={
      Object {
        "borderBottom": "1px solid rgba(0,0,0,0.1)",
        "paddingBottom": 8,
        "paddingTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      xs={2}
    >
      Filename:
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={4}
    >
      Test_3.JPG
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={6}
    >
      <PolicyDropdown
        disabled={false}
        displayPrompt={false}
        fieldLabel={
          <span>
            Security policy for this file to override inheritance
          </span>
        }
        fieldName="filePolicy2"
        policyList={
          Array [
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum. Sed lectus mauris, mollis et dolor vitae, rutrum lobortis risus. Aenean a nisl non felis pretium tincidunt id sit amet augue. Aenean ac quam non libero malesuada vulputate. Integer commodo lacus quis egestas varius. Etiam dapibus mollis feugiat. Aliquam pellentesque nunc ac libero feugiat laoreet. In hac habitasse platea dictumst. Duis sagittis lorem id vestibulum maximus. Nullam vel libero eu eros faucibus venenatis. Vestibulum interdum porttitor ipsum sed fringilla. Sed enim lacus, faucibus vel tincidunt euismod, euismod vitae turpis.",
              "id": 1,
              "label": "Administrators",
              "name": "Administrators",
              "order": 0,
              "value": 1,
            },
            Object {
              "description": "Suspendisse pellentesque libero eget molestie vehicula. Vestibulum eget purus euismod, imperdiet massa non, vulputate lectus. Sed mi mi, placerat ultricies purus nec, sollicitudin fringilla odio. Aliquam erat volutpat. Vestibulum at augue sed arcu condimentum finibus id et dolor.",
              "id": 2,
              "label": "Theses Assessors",
              "name": "Theses Assessors",
              "order": 10,
              "value": 2,
            },
            Object {
              "description": "Mauris pulvinar tortor eu lectus facilisis, ut ultricies risus elementum. Aenean ac sem quis enim molestie egestas ut id sem. Nulla nibh elit, efficitur fermentum nisl et, semper ultrices quam. Aenean in sollicitudin mi. Cras ultricies eros quis maximus pellentesque. Mauris justo mi, aliquet vitae nisl et, tristique pulvinar risus.",
              "id": 3,
              "label": "Evidence Assessors",
              "name": "Evidence Assessors",
              "order": 20,
              "value": 3,
            },
            Object {
              "description": "Sed quis blandit erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec condimentum feugiat maximus. Donec ullamcorper nulla nec leo elementum dapibus. Ut enim nunc, volutpat quis facilisis sed, congue vel arcu.",
              "id": 4,
              "label": "Staff and Students",
              "name": "Staff and Students",
              "order": 30,
              "value": 4,
            },
            Object {
              "description": "Aenean arcu nibh, feugiat ut mauris id, consectetur pulvinar ipsum. Vestibulum ullamcorper dictum tristique. Sed lobortis est in mauris venenatis, quis euismod nunc pellentesque. Cras iaculis a ex nec laoreet. Aliquam sapien arcu, pharetra eget maximus ac, volutpat sit amet libero.",
              "id": 5,
              "label": "Public",
              "name": "Public",
              "order": 100,
              "value": 5,
            },
          ]
        }
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`OverriddenSecuritySelector component should render properly 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      component="p"
      variant="body2"
    >
      test1
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <PolicyDropdown
      disabled={false}
      displayPrompt={true}
      fieldLabel="test4 policy to apply to this PID"
      fieldName="rek_security_policy"
      policyList={
        Array [
          Object {
            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum. Sed lectus mauris, mollis et dolor vitae, rutrum lobortis risus. Aenean a nisl non felis pretium tincidunt id sit amet augue. Aenean ac quam non libero malesuada vulputate. Integer commodo lacus quis egestas varius. Etiam dapibus mollis feugiat. Aliquam pellentesque nunc ac libero feugiat laoreet. In hac habitasse platea dictumst. Duis sagittis lorem id vestibulum maximus. Nullam vel libero eu eros faucibus venenatis. Vestibulum interdum porttitor ipsum sed fringilla. Sed enim lacus, faucibus vel tincidunt euismod, euismod vitae turpis.",
            "id": 1,
            "label": "Administrators",
            "name": "Administrators",
            "order": 0,
            "value": 1,
          },
          Object {
            "description": "Suspendisse pellentesque libero eget molestie vehicula. Vestibulum eget purus euismod, imperdiet massa non, vulputate lectus. Sed mi mi, placerat ultricies purus nec, sollicitudin fringilla odio. Aliquam erat volutpat. Vestibulum at augue sed arcu condimentum finibus id et dolor.",
            "id": 2,
            "label": "Theses Assessors",
            "name": "Theses Assessors",
            "order": 10,
            "value": 2,
          },
          Object {
            "description": "Mauris pulvinar tortor eu lectus facilisis, ut ultricies risus elementum. Aenean ac sem quis enim molestie egestas ut id sem. Nulla nibh elit, efficitur fermentum nisl et, semper ultrices quam. Aenean in sollicitudin mi. Cras ultricies eros quis maximus pellentesque. Mauris justo mi, aliquet vitae nisl et, tristique pulvinar risus.",
            "id": 3,
            "label": "Evidence Assessors",
            "name": "Evidence Assessors",
            "order": 20,
            "value": 3,
          },
          Object {
            "description": "Sed quis blandit erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec condimentum feugiat maximus. Donec ullamcorper nulla nec leo elementum dapibus. Ut enim nunc, volutpat quis facilisis sed, congue vel arcu.",
            "id": 4,
            "label": "Staff and Students",
            "name": "Staff and Students",
            "order": 30,
            "value": 4,
          },
          Object {
            "description": "Aenean arcu nibh, feugiat ut mauris id, consectetur pulvinar ipsum. Vestibulum ullamcorper dictum tristique. Sed lobortis est in mauris venenatis, quis euismod nunc pellentesque. Cras iaculis a ex nec laoreet. Aliquam sapien arcu, pharetra eget maximus ac, volutpat sit amet libero.",
            "id": 5,
            "label": "Public",
            "name": "Public",
            "order": 100,
            "value": 5,
          },
        ]
      }
      prompt="test2"
    />
  </WithStyles(Grid)>
  <SelectedSecurityPolicyDescription
    selectedPolicyKey={1}
    title="test3"
  />
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render collections properly 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Collection
          </b>
           level security - 
          UQ:11398
        </span>
      }
    >
      <SecuritySelector
        disabled={false}
        isPolicyInherited={false}
        securityType="Collection"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
      <WithStyles(Grid)
        container={true}
        spacing={8}
        style={
          Object {
            "marginTop": 16,
          }
        }
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <PolicyDropdown
            disabled={false}
            displayPrompt={true}
            fieldLabel="Record level policy to apply to this PID"
            fieldName="rek_datastream_policy"
            policyList={
              Array [
                Object {
                  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum. Sed lectus mauris, mollis et dolor vitae, rutrum lobortis risus. Aenean a nisl non felis pretium tincidunt id sit amet augue. Aenean ac quam non libero malesuada vulputate. Integer commodo lacus quis egestas varius. Etiam dapibus mollis feugiat. Aliquam pellentesque nunc ac libero feugiat laoreet. In hac habitasse platea dictumst. Duis sagittis lorem id vestibulum maximus. Nullam vel libero eu eros faucibus venenatis. Vestibulum interdum porttitor ipsum sed fringilla. Sed enim lacus, faucibus vel tincidunt euismod, euismod vitae turpis.",
                  "id": 1,
                  "label": "Administrators",
                  "name": "Administrators",
                  "order": 0,
                  "value": 1,
                },
                Object {
                  "description": "Suspendisse pellentesque libero eget molestie vehicula. Vestibulum eget purus euismod, imperdiet massa non, vulputate lectus. Sed mi mi, placerat ultricies purus nec, sollicitudin fringilla odio. Aliquam erat volutpat. Vestibulum at augue sed arcu condimentum finibus id et dolor.",
                  "id": 2,
                  "label": "Theses Assessors",
                  "name": "Theses Assessors",
                  "order": 10,
                  "value": 2,
                },
                Object {
                  "description": "Mauris pulvinar tortor eu lectus facilisis, ut ultricies risus elementum. Aenean ac sem quis enim molestie egestas ut id sem. Nulla nibh elit, efficitur fermentum nisl et, semper ultrices quam. Aenean in sollicitudin mi. Cras ultricies eros quis maximus pellentesque. Mauris justo mi, aliquet vitae nisl et, tristique pulvinar risus.",
                  "id": 3,
                  "label": "Evidence Assessors",
                  "name": "Evidence Assessors",
                  "order": 20,
                  "value": 3,
                },
                Object {
                  "description": "Sed quis blandit erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec condimentum feugiat maximus. Donec ullamcorper nulla nec leo elementum dapibus. Ut enim nunc, volutpat quis facilisis sed, congue vel arcu.",
                  "id": 4,
                  "label": "Staff and Students",
                  "name": "Staff and Students",
                  "order": 30,
                  "value": 4,
                },
                Object {
                  "description": "Aenean arcu nibh, feugiat ut mauris id, consectetur pulvinar ipsum. Vestibulum ullamcorper dictum tristique. Sed lobortis est in mauris venenatis, quis euismod nunc pellentesque. Cras iaculis a ex nec laoreet. Aliquam sapien arcu, pharetra eget maximus ac, volutpat sit amet libero.",
                  "id": 5,
                  "label": "Public",
                  "name": "Public",
                  "order": 100,
                  "value": 5,
                },
              ]
            }
            prompt="test2"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  />
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render collections properly with dataStreamPolicy 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Collection
          </b>
           level security - 
          UQ:11398
        </span>
      }
    >
      <SecuritySelector
        disabled={false}
        isPolicyInherited={false}
        securityType="Collection"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
      <WithStyles(Grid)
        container={true}
        spacing={8}
        style={
          Object {
            "marginTop": 16,
          }
        }
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <PolicyDropdown
            disabled={false}
            displayPrompt={true}
            fieldLabel="Record level policy to apply to this PID"
            fieldName="rek_datastream_policy"
            policyList={
              Array [
                Object {
                  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum. Sed lectus mauris, mollis et dolor vitae, rutrum lobortis risus. Aenean a nisl non felis pretium tincidunt id sit amet augue. Aenean ac quam non libero malesuada vulputate. Integer commodo lacus quis egestas varius. Etiam dapibus mollis feugiat. Aliquam pellentesque nunc ac libero feugiat laoreet. In hac habitasse platea dictumst. Duis sagittis lorem id vestibulum maximus. Nullam vel libero eu eros faucibus venenatis. Vestibulum interdum porttitor ipsum sed fringilla. Sed enim lacus, faucibus vel tincidunt euismod, euismod vitae turpis.",
                  "id": 1,
                  "label": "Administrators",
                  "name": "Administrators",
                  "order": 0,
                  "value": 1,
                },
                Object {
                  "description": "Suspendisse pellentesque libero eget molestie vehicula. Vestibulum eget purus euismod, imperdiet massa non, vulputate lectus. Sed mi mi, placerat ultricies purus nec, sollicitudin fringilla odio. Aliquam erat volutpat. Vestibulum at augue sed arcu condimentum finibus id et dolor.",
                  "id": 2,
                  "label": "Theses Assessors",
                  "name": "Theses Assessors",
                  "order": 10,
                  "value": 2,
                },
                Object {
                  "description": "Mauris pulvinar tortor eu lectus facilisis, ut ultricies risus elementum. Aenean ac sem quis enim molestie egestas ut id sem. Nulla nibh elit, efficitur fermentum nisl et, semper ultrices quam. Aenean in sollicitudin mi. Cras ultricies eros quis maximus pellentesque. Mauris justo mi, aliquet vitae nisl et, tristique pulvinar risus.",
                  "id": 3,
                  "label": "Evidence Assessors",
                  "name": "Evidence Assessors",
                  "order": 20,
                  "value": 3,
                },
                Object {
                  "description": "Sed quis blandit erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec condimentum feugiat maximus. Donec ullamcorper nulla nec leo elementum dapibus. Ut enim nunc, volutpat quis facilisis sed, congue vel arcu.",
                  "id": 4,
                  "label": "Staff and Students",
                  "name": "Staff and Students",
                  "order": 30,
                  "value": 4,
                },
                Object {
                  "description": "Aenean arcu nibh, feugiat ut mauris id, consectetur pulvinar ipsum. Vestibulum ullamcorper dictum tristique. Sed lobortis est in mauris venenatis, quis euismod nunc pellentesque. Cras iaculis a ex nec laoreet. Aliquam sapien arcu, pharetra eget maximus ac, volutpat sit amet libero.",
                  "id": 5,
                  "label": "Public",
                  "name": "Public",
                  "order": 100,
                  "value": 5,
                },
              ]
            }
            prompt="test2"
          />
        </WithStyles(Grid)>
        <SelectedSecurityPolicyDescription
          selectedPolicyKey={1}
        />
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  />
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render communities properly 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Community
          </b>
           level security - 
          UQ:3883
        </span>
      }
    >
      <SecuritySelector
        disabled={false}
        isPolicyInherited={true}
        securityType="Community"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  />
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render properly 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Community
          </b>
           level security - 
          test3
        </span>
      }
    >
      <SecuritySelector
        disabled={false}
        isPolicyInherited={false}
        securityType="Community"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  />
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render properly 2`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Community
          </b>
           level security - 
          test3
        </span>
      }
    >
      <SecuritySelector
        disabled={false}
        isPolicyInherited={false}
        securityType="Community"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  />
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render records properly with inherited security 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Record
          </b>
           level security - 
          UQ:252236
        </span>
      }
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <Field
          component={[Function]}
          label="Override inherited security (detailed below)"
          name="rek_security_inherited"
          normalize={[Function]}
        />
      </WithStyles(Grid)>
      <SecuritySelector
        disabled={false}
        isPolicyInherited={true}
        securityType="Record"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Datastream
          </b>
           security - 
          UQ:252236
        </span>
      }
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <InheritedSecurityDetails />
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SecurityCard component should render records properly without inherited security 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Record
          </b>
           level security - 
          UQ:252236
        </span>
      }
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <Field
          component={[Function]}
          label="Override inherited security (detailed below)"
          name="rek_security_inherited"
          normalize={[Function]}
        />
      </WithStyles(Grid)>
      <SecuritySelector
        disabled={false}
        isPolicyInherited={false}
        securityType="Record"
        text={
          Object {
            "description": "test1",
            "prompt": "test2",
          }
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      title={
        <span>
          <b>
            Datastream
          </b>
           security - 
          UQ:252236
        </span>
      }
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <DataStreamSecuritySelector
          disabled={false}
          text={
            Object {
              "description": "test1",
              "prompt": "test2",
            }
          }
        />
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SecuritySelector component should render properly 1`] = `
<OverriddenSecuritySelector
  disabled={false}
  securityPolicy={2}
  securityType="test4"
  text={
    Object {
      "description": "test1",
      "prompt": "test2",
      "selectedTitle": "test3",
    }
  }
/>
`;

exports[`SecuritySelector component should render properly 2`] = `<InheritedSecurityDetails />`;
